--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
           <div class="tooltip">Search</div>
         </button>
         <!-- Put position absolute inside position relative -->
+        <!--
         <button class="voice-search-button">
           <img class="voice-search-icon" src="icons/voice-search-icon.svg">
           <div class="tooltip">Search with your voice</div>
-        </button>
-      </div>
+        </button> -->
+      <!--</div>
       <div class="right-section">
         <div class="upload-icon-container">
           <img class="upload-icon" src="icons/upload.svg">
@@ -46,7 +47,7 @@
         </div>
         <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
       </div>
-    </header>
+    </header> -->
 
     <nav class="sidebar">
       <div class="sidebar-link">
@@ -58,24 +59,25 @@
         <div>Explore</div>
       </div>
       <div class="sidebar-link">
-        <img src="icons/subscriptions.svg">
-        <div>Subscriptions</div>
+        <img src="icons/products.svg">
+        <div>Products</div>
       </div>
       <div class="sidebar-link">
-        <img src="icons/originals.svg">
-        <div>Originals</div>
+        <img src="icons/info.svg">
+        <div>About</div>
       </div>
-      <div class="sidebar-link">
+<!--       <div class="sidebar-link"> 
         <img src="icons/youtube-music.svg">
         <div>YouTube Music</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/library.svg">
         <div>Library</div>
-      </div>
+      </div> -->
     </nav>
 
     <main>
+      <!--
       <section class="video-grid">
         <div class="video-preview">
           <div class="thumbnail-row">
@@ -353,6 +355,7 @@
           </div>
         </div>
       </section>
+      -->
     </main>
   </body>
 </html>
