--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="left-section">
+      <!--<div class="left-section">
         <img class="hamburger-menu" src="icons/hamburger-menu.svg">
         <img class="youtube-logo" src="icons/seca-logo.svg">
       </div>
@@ -47,8 +47,8 @@
           <div class="tooltip">Notifications</div>
         </div>
         <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
-      </div>
-    </header> -->
+      </div>-->
+    </header> 
 
     <nav class="sidebar">
       <div class="sidebar-link">
