--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <img src="icons/info.svg">
         <div>About</div>
       </div>
-<!--       <div class="sidebar-link"> 
-        <img src="icons/youtube-music.svg">
-        <div>YouTube Music</div>
+      <div class="sidebar-link"> 
+        <img src="icons/message.svg">
+        <div>WhatsApp</div>
       </div>
-      <div class="sidebar-link">
+      <!-- <div class="sidebar-link">
         <img src="icons/library.svg">
         <div>Library</div>
       </div> -->
