--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Seca | Drought Detection Simplified</title>
-    <link rel="shortcut icon" type="image/x-icon" href="icons/explore.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
