--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <style>
+body {
+  background-image: url('one.png');
+  background-size: cover;
+}
+</style>
   <head>
     <title>Seca | Drought Detection Simplified</title>
-    <link rel="shortcut icon" type="image/x-icon" href="lettersicon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="one.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
