--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <style>
 body {
-  background-image: url('one.png');
+  background-image: url('onemedium.png');
   background-size: cover;
 }
 </style>
   <head>
     <title>Seca | Drought Detection Simplified</title>
-    <link rel="shortcut icon" type="image/x-icon" href="one.png">
+    <link rel="shortcut icon" type="image/x-icon" href="onesmall.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
