--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <style>
 body {
   background-image: url('onemedium.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
 }
 </style>
@@ -56,21 +58,21 @@ body {
       </div>
     </header> -->
 
-    <nav class="sidebar">
+    <!--<nav class="sidebar">
       <div class="sidebar-link">
         <img src="icons/home.svg">
         <div>Home</div>
-      </div>
+      </div></div>-->
       <div class="sidebar-link">
         <img src="icons/explore.svg">
-        <div>Explore</div>
-      </div>
+        <div>Find Your Farm</div>
+      
       <div class="sidebar-link">
-        <img src="icons/products.svg">
+        <img src="icons/package.svg">
         <div>Products</div>
       </div>
       <div class="sidebar-link">
-        <img src="icons/info.svg">
+        <img src="icons/info2.svg">
         <div>About</div>
       </div>
       <div class="sidebar-link"> 
