--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@ body {
       </div>
     </header> -->
 
-    <!--<nav class="sidebar">
+    <nav class="sidebar">
+      <!--
       <div class="sidebar-link">
         <img src="icons/home.svg">
         <div>Home</div>
-      </div></div>-->
+      </div>
+      -->
       <div class="sidebar-link">
         <img src="icons/explore.svg">
         <div>Find Your Farm</div>
@@ -81,8 +83,8 @@ body {
       </div>
       <!-- <div class="sidebar-link">
         <img src="icons/library.svg">
-        <div>Library</div>
-      </div> -->
+        <div>Library</div>-->
+      </div> 
     </nav>
 
     <main>
