--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <style>
-    body {
-      /* background-image: url('onemedium.png'); */
-      background-image: url('radar.png');
+    .main {
+      background-image: url('onemedium.png');
+      /* background-image: url('radar.png'); 
       background-repeat: no-repeat;
-      background-attachment: fixed;
+      background-attachment: fixed;*/
       background-size: cover;
     }
   </style>
@@ -103,9 +103,9 @@
     </nav>
     <main>
      
-      <div class="main1">
-      </div>
       <div class="main">
+      </div>
+      <div class="main1">
       </div>
       <!-- <img src="radar.png"> -->
       <!--
