--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
   <head>
     <title>Seca | Advanced Drought Detection</title>
-    <link rel="shortcut icon" type="image/x-icon" href="onesmall.png">
+    <link rel="shortcut icon" type="image/x-icon" href="onesmallgold.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
