--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="main3">
         <div class="navylayer">
         <p class=heading>
-          Combines below-ground moisture sensing with satellite analytics
+          Combines below-ground moisture sensing with satellite analysis
         </p>
       </div>
       </div>
