--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="main">
         <img class="text" src="Reduce.png"/>
       </div>
-      <div class="main1">
+<!--       <div class="main1">
         <div class="bluelayer">
           <p class=heading>
             Weekly high-resolution
@@ -151,11 +151,11 @@
       <div class="main2">
         <div class="colorlayer">
           <!-- <div class="clear"> -->
-            <p class=heading>
+<!--             <p class=heading>
               Gives weeks to months of advance warning before crops are affected
-            </p>
+            </p> -->
           <!-- </div> -->
-        </div>
+<!--         </div>
       </div>
       <div class="main3">
         <div class="bluelayer">
@@ -182,7 +182,7 @@
         <div>
             
         </div>
-      </div>
+      </div> --> 
       <!-- <img src="radar.png"> -->
       <!--
       <section class="video-grid">
